packages/isar_db/test/errors/class/enum.dart
// only classes

import 'package:isar_db/isar_db.dart';

// Test case for enum validation

// ignore: invalid_annotation_target - Test case for enum validation
@collection
enum Test { a, b, c }
